2007-11-23  Samuel Tardieu  <sam@rfc1149.net>

	* s-inmaop-posix.adb, s-intman-vxworks.adb, s-taprop-hpux-dce.adb,
	s-taprop-irix.adb, s-taprop-linux.adb, s-taprop-lynxos.adb,
	s-taprop-posix.adb, s-taprop-tru64.adb, s-taprop-vxworks.adb:
	Use 'Access instead of 'Unchecked_Access in second and third
	arguments of pthread_sigmask.

2007-11-23  Eric Botcazou  <ebotcazou@adacore.com>

	* decl.c (ceil_alignment): New function.
	(gnat_to_gnu_entity): Use it to set the alignment on atomic types.
	(make_packable_type): Likewise.

2007-11-22  Olivier Hainque  <hainque@adacore.com>

	* trans.c (gnat_to_gnu) <case N_Free_Statement>: Reformat lines
	to fit in 80 columns.

2007-11-21  Aurelien Jarno <aurelien@aurel32.net>

	* s-osinte-kfreebsd-gnu.ads (To_Target_Priority): New function.
	* Makefile.in: Add EH_MECHANISM=-gcc to kfreebsd-gnu. Remove SYMLIB.

2007-11-19  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/34098
	* misc.c (gnat_adjust_rli): Delete.
	(gnat_init): Do not initialize the translation code here.
	Do not call set_lang_adjust_rli.
	* trans.c (init_code_table): Make static.
	(gnat_init_stmt_group): Delete.
	(gigi): Initialize the translation code entirely here.
	Emit debug info for the common types here instead of...
	* utils.c (gnat_init_decl_processing): ...here.
	* gigi.h (init_code_table): Delete.
	(gnat_init_stmt_group): Likewise.

2007-11-16  Olivier Hainque  <hainque@adacore.com>

	* utils2.c (build_call_alloc_dealloc) <if gnu_obj>: Move the code
	retrieving an allocator return value from a super-aligned address from
	here to ...
	* trans.c (gnat_to_gnu) <case N_Free_Statement>: ... here, and don't
	expect a super-aligned address for a fat or thin pointer.
	
2007-11-14  Eric Botcazou  <ebotcazou@adacore.com>

	* trans.c (call_to_gnu): Always set the source location on the call
	expression.  If the function returns-by-target, also set it on the
	address expression.

2007-11-14  Samuel Tardieu  <sam@rfc1149.net>
