@@ -1,3 +1,9 @@
+2007-11-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/specs/size_clause1.ads: New test.
+	* gnat.dg/specs/size_clause2.ads: Likewise.
+	* gnat.dg/specs/size_clause3.ads: Likewise.
+
 2007-11-25  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/33499
